src/test/ui/error-codes/E0152.stderr
error[E0152]: duplicate lang item found: `arc`.
  --> $DIR/E0152.rs:4:1
   |
LL | struct Foo;
   | ^^^^^^^^^^^
   |
   = note: first defined in crate `alloc`.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
