src/test/ui/error-codes/E0152.rs
#![feature(lang_items)]

#[lang = "arc"]
struct Foo; //~ ERROR E0152

fn main() {
}
